--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
       <h5 class="nav-item">Price</h5>
       <h5 class="nav-item">About</h5>
     </div>
-    <img src="./images/actions.svg" alt="actions" />
+    <div class="img-actions">
+      <img src="./images/actions.svg" alt="actions" />
+    </div>
   </nav>
   <div class="intro-section">
     <div class="left-section">
