--- a/index.html
+++ b/index.html
@@ -9,12 +9,15 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Poppins&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+        integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Product Home Page</title>
 </head>
 
 <body>
     <nav>
-        <img src="./images/logo.svg" alt="logo" />
+        <img src="./images/black-logo.png" alt="logo" />
         <div class="nav-items">
             <h5 class="nav-item active-item">Home</h5>
             <h5 class="nav-item">Product</h5>
@@ -24,6 +27,7 @@
         <div class="img-actions">
             <img src="./images/actions.svg" alt="actions" />
         </div>
+        <i class="fa-solid fa-bars fa-2xl"></i>
     </nav>
     <div class="intro-section">
         <div class="left-section">
@@ -56,7 +60,7 @@
         </div>
         <div class="right-section">
             <div class="headphone-div">
-                <img src="./images/discount.svg" alt="discount" class="discount shadow" />
+                <img class="discount shadow"  src="./images/discount.svg" alt="discount" />
                 <div class="discount-content">
                     <h4>Discount</h4>
                     <h1>50%</h1>
